fixed - header on mobile for ada

--- a/components/ada/ada.css
+++ b/components/ada/ada.css
@@ -53,6 +53,13 @@ body #accessibilityTrigger * {
   line-height: 1.2 !important;
 }
 
+@media(max-width:961px){
+    #accessibilityWidget .accessibilityHeader {
+        font-size: 20px !important;
+      }
+      
+}
+
 #accessibilityWidget .accessibilityClose {
   font-size: 18px !important;
   line-height: 1 !important;
@@ -154,8 +161,8 @@ body #accessibilityTrigger * {
 /* ---------------- CLOSE & HEADER ---------------- */
 .accessibilityClose {
     position: absolute;
-    top: 15px;
-    right: 15px;
+    top: 0px;
+    right: 0px;
     width: 32px;
     height: 32px;
     display: flex;
@@ -179,9 +186,9 @@ body #accessibilityTrigger * {
 .accessibilityHeader {
     background: var(--primary);
     color: white;
-    padding: 20px;
+    padding: 40px;
     font-size: 24px;
-    font-weight: 700;
+    font-weight: 400;
     text-align: center;
     flex-shrink: 0;
     line-height: 1.2;
@@ -191,14 +198,24 @@ body #accessibilityTrigger * {
     position: relative;
 }
 
+@media(max-width:961px){
+    .accessibilityHeader{font-size:20px;}
+}
+
 .accessibilityHeader__title {
     flex: 1;
+}
+
+.accessibilityHeader__title {
+    display:block;
+    position:relative;
+    top:-25px;
 }
 
 /* Reset Button */
 .reset-button {
     position: absolute;
-    right: 60px;
+    left: 183px;
     top: 50%;
     transform: translateY(-50%);
 }
@@ -207,7 +224,7 @@ body #accessibilityTrigger * {
     background: rgba(255,255,255,0.2);
     border: none;
     color: white;
-    padding: 8px 12px;
+    padding: 10px 46.5px;
     border-radius: 6px;
     cursor: pointer;
     font-size: 14px;
